--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backcall==0.2.0
 beautifulsoup4==4.12.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.7
 colorama==0.4.6
 comm==0.1.3
 contourpy==1.0.7
@@ -22,12 +23,14 @@ kiwisolver==1.4.4
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
+networkx==3.1
+nltk==3.8.1
 numpy==1.24.3
 packaging==23.1
 pandas==2.0.1
 parso==0.8.3
 pickleshare==0.7.5
-Pillow==9.5.0
+Pillow==10.1.0
 platformdirs==3.5.1
 prompt-toolkit==3.0.38
 psutil==5.9.5
@@ -39,6 +42,7 @@ python-dateutil==2.8.2
 pytz==2023.3
 pywin32==306
 pyzmq==25.0.2
+regex==2023.8.8
 requests==2.30.0
 scikit-learn==1.2.2
 scipy==1.10.1
@@ -47,6 +51,7 @@ soupsieve==2.4.1
 stack-data==0.6.2
 threadpoolctl==3.1.0
 tornado==6.3.2
+tqdm==4.66.1
 traitlets==5.9.0
 tzdata==2023.3
 urllib3==2.0.2
